feat: Implement deployment and build scripts
Adds necessary scripts to `package.json` for building and deploying the application to GitHub Pages. Updates `vite.config.ts` to handle relative asset paths for deployment and configures React as a Vite plugin. Also includes minor cleanup in `tsconfig.json` for modern syntax and dependency updates.

--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "copy-of-gemini-e-commerce-dashboard",
+  "name": "gemini-ecommerce-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react-dom": "^19.1.1",
-    "react": "^19.1.1",
-    "react-router-dom": "^7.8.2",
     "@google/genai": "^1.18.0",
     "lucide-react": "^0.543.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "recharts": "^3.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1"
   }
 }
